--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,31 +1,31 @@
 * {
-    font-family: "SauceCodePro Nerd Font Mono", monospace;
+    font-family: "DaddyTimeMono Nerd Font", monospace;
 }
 
 window#waybar {
 	border-radius: 0px;
     color: #cccccc;
-    background: #444444;
+    background: #858585;
 }
 
 #workspaces button {
 	border-radius: 14px;
     padding-top: 10px;
     padding-bottom: 10px;
-	padding-left:3px;
-	padding-right: 3px;
+	padding-left:5px;
+	padding-right: 5px;
 	margin-bottom: 10px;
 	margin-left: 3px;
 	margin-right: 3px;
-    background: #1c1c1c;
+    background: #333333;
     color: #cccccc;
-	font-size: 20px;
+	font-size: 25px;
 	font-weight: bold;
 }
 
 #workspaces button.focused {
-    background: #5f87af;
-	color: black;
+    background: #875f5f;
+	color: #333333;
 }
 
 #workspaces button.persistent {
@@ -47,9 +47,9 @@ window#waybar {
 	margin-top: 10px;
 	margin-left: 3px;
 	margin-right: 3px;
-    background: #1c1c1c;
+    background: #666666;
     color: #cccccc;
-	font-size: 18px;
+	font-size: 22px;
 	font-weight: bold
 }
 
@@ -65,9 +65,9 @@ window#waybar {
 	margin-top: 0px;
 	margin-left: 3px;
 	margin-right: 3px;
-    background: #1c1c1c;
+    background: #666666;
     color: #cccccc;
-	font-size: 17px;
+	font-size: 22px;
 	font-weight: bold
 }
 
@@ -83,8 +83,23 @@ window#waybar {
 	margin-top: 10px;
 	margin-left: 3px;
 	margin-right: 3px;
-    background: #1c1c1c;
+    background: #666666;
     color: #cccccc;
-	font-size: 17px;
+	font-size: 22px;
 	font-weight: bold
+}
+
+#battery {
+	border-radius: 14px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+	padding-left:3px;
+	padding-right: 3px;
+	margin-bottom: 10px;
+	margin-left: 3px;
+	margin-right: 3px;
+    background: #666666;
+    color: #cccccc;
+	font-size: 22px;
+	font-weight: bold;
 }
