--- a/waybar/style.css
+++ b/waybar/style.css
@@ -5,103 +5,58 @@
 }
 
 window#waybar {
-	border-radius: 0px;
     color: #cccccc;
     background: @surface1;
 }
 
 #workspaces button {
-	border-radius: 17px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-	padding-left:5px;
-	padding-right: 5px;
-	margin-bottom: 10px;
-    margin-left: 6px;
-	margin-right: 6px;
-    background: @base;
-    color: @text;
+	border-radius: 25px;
+	margin: 5px 5px;
+	padding: 15px 0px;
+    	background: @base;
+    	color: @text;
 	font-size: 25px;
 	font-weight: bold;
 }
 
 #workspaces button.focused {
-    background: @blue;
+    	background: @blue;
 	color: @base;
 }
 
 #workspaces button.persistent {
-    padding-top: 10px;
-    padding-bottom: 10px;
-	padding-left:3px;
-	padding-right: 3px;
-    background: @overlay0;
-    color: @text;
+    	background: @overlay0;
+    	color: @text;
 	font-weight: bold;
 }
 
 #clock {
-	border-radius: 17px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-	padding-left: 5px;
-    padding-right: 5px;
-	margin-top: 10px;
-	margin-left: 6px;
-	margin-right: 6px;
+	border-radius: 25px;
+	margin: 10px 5px;
+	padding: 15px 0px;
+
     background: @overlay0;
     color: @text;
-	font-size: 22px;
+	font-size: 18px;
 	font-weight: bold
 }
+
+
 
 #clock.date {
-	border-bottom-left-radius: 17px; 
-	border-bottom-right-radius: 17px;
-	border-top-left-radius: 0px;   
-	border-top-right-radius: 0px;  
-    padding-bottom: 10px;
-    padding-top: 0px;
-	padding-left: 3px;
-    padding-right: 3px;
-	margin-top: 0px;
-	margin-left: 6px;
-	margin-right: 6px;
-    background: @overlay0;
-    color: @text;
-	font-size: 22px;
+    	background: @overlay0;
+    	color: @text;
 	font-weight: bold
 }
 
-#custom-day {
-	border-bottom-left-radius: 0px;
-	border-bottom-right-radius: 0px;
-	border-top-left-radius: 17px;
-	border-top-right-radius: 17px;
-    padding-top: 10px;
-    padding-bottom: 0px;
-	padding-left: 3px;
-    padding-right: 3px;
-	margin-top: 10px;
-	margin-left: 6px;
-	margin-right: 6px;
-    background: @overlay0;
-    color: @text;
-	font-size: 22px;
-	font-weight: bold
-}
 
 #battery {
-	border-radius: 17px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-	padding-left:3px;
-	padding-right: 3px;
-	margin-bottom: 10px;
-	margin-left: 6px;
-	margin-right: 6px;
-    background: @overlay0;
-    color: @text;
-	font-size: 22px;
+	border-radius: 25px;
+	margin: 10px 5px;
+	padding: 20px 0px;
+
+    	background: @overlay0;
+    	color: @text;
+	font-size: 18px;
 	font-weight: bold;
 }
