--- a/waybar/style.css
+++ b/waybar/style.css
@@ -13,20 +13,20 @@ window#waybar {
 	border-radius: 25px;
 	margin: 5px 5px;
 	padding: 15px 0px;
-    	background: @base;
-    	color: @text;
+    background: @base;
+    color: @text;
 	font-size: 25px;
 	font-weight: bold;
 }
 
 #workspaces button.focused {
-    background: @blue;
-	color: @base;
+    background: #2e7de9;
+	color: #e9e9ed;
 }
 
 #workspaces button.persistent {
-    	background: @overlay0;
-    	color: @text;
+    background: @overlay0;
+    color: @text;
 	font-weight: bold;
 }
 
