--- a/waybar/style.css
+++ b/waybar/style.css
@@ -54,6 +54,22 @@ window#waybar {
     font-weight: bold;
 }
 
+#custom-backlight_icon{
+    margin: 5px 5px 2px 0px;
+    color: @text;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+#backlight {
+	border-radius: 25px;
+	margin: 0px 5px 20px 5px;
+	padding: 20px 0px;
+    background: @overlay0;
+    color: @text;
+	font-size: 18px;
+	font-weight: bold;
+}
 
 
 #battery {
