--- a/waybar/style.css
+++ b/waybar/style.css
@@ -12,10 +12,10 @@ window#waybar {
 #workspaces button {
 	border-radius: 25px;
 	margin: 5px 5px;
-	padding: 15px 0px;
+	padding: 20px 0px 15px 0px;
     background: @base;
     color: @text;
-	font-size: 25px;
+	font-size: 20px;
 	font-weight: bold;
 }
 
@@ -40,7 +40,7 @@ window#waybar {
 #clock {
 	border-radius: 25px;
 	margin: 0px 5px 0px 5px;
-	padding: 15px 0px;
+	padding: 20px 0px 15px 0px;
     background: @overlay0;
     color: @text;
 	font-size: 18px;
@@ -64,7 +64,7 @@ window#waybar {
 #backlight {
 	border-radius: 25px;
 	margin: 0px 5px 20px 5px;
-	padding: 20px 0px;
+    padding: 25px 0px 20px 0px;
     background: @overlay0;
     color: @text;
 	font-size: 18px;
@@ -75,7 +75,7 @@ window#waybar {
 #battery {
 	border-radius: 25px;
 	margin: 0px 5px 10px 5px;
-	padding: 20px 0px;
+    padding: 25px 0px 20px 0px;
     background: @overlay0;
     color: @text;
 	font-size: 18px;
