--- a/waybar/style.css
+++ b/waybar/style.css
@@ -10,27 +10,25 @@ window#waybar {
 }
 
 #workspaces button {
-	border-radius: 25px;
+    border-radius: 25px;
     margin: 5px;
     padding: 1px 20px 0px 20px;
     background: @base;
     color: @text;
-	font-size: 20px;
-	font-weight: bold;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 #workspaces button.focused {
     background: #7aa2f7;
-	color: @base;
+    color: @base;
 }
 
 #workspaces button.persistent {
     background: @overlay0;
     color: @text;
-	font-weight: bold;
+    font-weight: bold;
 }
-
-
 
 #custom-clock_icon {
     margin: 2px 5px 0px 5px;
@@ -39,24 +37,25 @@ window#waybar {
     font-weight: bold;
 }
 
+
 #clock {
-	border-radius: 25px;
+    border-radius: 25px;
     margin: 5px;
     padding: 2px 20px 0px 20px;
     background: @overlay0;
     color: @text;
-	font-size: 18px;
-	font-weight: bold
+    font-size: 18px;
+    font-weight: bold
 }
 
-#custom-calendar_icon{
+#custom-calendar_icon {
     color: @text;
     margin: 2px 10px 0px 20px;
     font-size: 18px;
     font-weight: bold;
 }
 
-#custom-backlight_icon{
+#custom-backlight_icon {
     color: @text;
     margin: 2px 10px 0px 20px;
     font-size: 18px;
@@ -64,33 +63,43 @@ window#waybar {
 }
 
 #backlight {
-	border-radius: 25px;
+    border-radius: 25px;
     margin: 5px;
     padding: 2px 20px 0px 20px;
     background: @overlay0;
     color: @text;
-	font-size: 18px;
-	font-weight: bold;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 
 #battery {
-	border-radius: 25px;
+    border-radius: 25px;
     margin: 5px 5px 5px 0px;
     padding: 2px 20px 0px 20px;
     background: @overlay0;
     color: @text;
-	font-size: 18px;
-	font-weight: bold;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 #battery.icon {
-	border-radius: 0px;
+    border-radius: 0px;
     margin: 6px 20px 5px 20px;
     padding: 2px 0px 0px 0px;
     background: @surface1;
     color: @text;
-	font-size: 18px;
-	font-weight: bold;
+    font-size: 18px;
+    font-weight: bold;
 
+}
+
+#pulseaudio {
+    border-radius: 25px;
+    margin: 5px 5px 5px 0px;
+    padding: 2px 20px 0px 20px;
+    background: @overlay0;
+    color: @text;
+    font-size: 18px;
+    font-weight: bold;
 }
