--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,7 +1,7 @@
 @import "catppuccin_frappe.css";
 
 * {
-    font-family: "SauceCodePro Nerd Font", monospace;
+    font-family: "GeistMono Nerd Font";
 }
 
 window#waybar {
@@ -12,15 +12,15 @@ window#waybar {
 #workspaces button {
     border-radius: 25px;
     margin: 5px;
-    padding: 1px 20px 0px 20px;
+    padding: 0px 20px;
     background: @base;
     color: @text;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
 }
 
 #workspaces button.focused {
-    background: #7aa2f7;
+    background: #539bf5;
     color: @base;
 }
 
@@ -31,7 +31,8 @@ window#waybar {
 }
 
 #custom-clock_icon {
-    margin: 2px 5px 0px 5px;
+    margin: 0px 10px;
+    padding: 0px 0px;
     color: @text;
     font-size: 18px;
     font-weight: bold;
@@ -40,8 +41,8 @@ window#waybar {
 
 #clock {
     border-radius: 25px;
-    margin: 5px;
-    padding: 2px 20px 0px 20px;
+    margin: 5px 10px 5px 0px;
+    padding: 0px 20px;
     background: @overlay0;
     color: @text;
     font-size: 18px;
@@ -50,80 +51,78 @@ window#waybar {
 
 #custom-calendar_icon {
     color: @text;
-    margin: 2px 10px 0px 20px;
+    margin: 0px 10px;
+    padding: 0px 0px;
     font-size: 18px;
     font-weight: bold;
 }
 
-#custom-backlight_icon {
+#pulseaudio.bluetooth.icon {
     color: @text;
-    margin: 2px 10px 0px 20px;
+    background: @surface1;
+    margin: 0px 15px;
+    padding: 0px 0px;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+#pulseaudio.icon {
+    color: @text;
+    background: @surface1;
+    margin: 0px 15px;
+    padding: 0px 0px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+#pulseaudio {
+    border-radius: 25px;
+    margin: 5px 10px 5px 0px;
+    padding: 0px 20px;
+    background: @overlay0;
+    color: @text;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+
+#backlight.icon {
+    margin: 0px 10px;
+    padding: 0px 0px;
+    background: @surface1;
+    color: @text;
     font-size: 18px;
     font-weight: bold;
 }
 
 #backlight {
     border-radius: 25px;
-    margin: 5px;
-    padding: 2px 20px 0px 20px;
+    margin: 5px 10px 5px 0px;
+    padding: 0px 20px;
     background: @overlay0;
     color: @text;
     font-size: 18px;
     font-weight: bold;
 }
-
 
 #battery {
     border-radius: 25px;
-    margin: 5px 5px 5px 0px;
-    padding: 2px 20px 0px 20px;
+    margin: 5px 10px 5px 0px;
+    padding: 0px 20px;
     background: @overlay0;
     color: @text;
     font-size: 18px;
     font-weight: bold;
 }
-
-
 
 #battery.icon {
-    border-radius: 0px;
-    margin: 6px 20px 5px 20px;
-    padding: 2px 0px 0px 0px;
+    margin: 0px 15px;
+    padding: 0px 0px;
     background: @surface1;
     color: @text;
     font-size: 18px;
     font-weight: bold;
 
-}
-
-#pulseaudio.bluetooth.icon {
-    border-radius: 0px;
-    margin: 0px 15px 0px 0px;
-    padding: 2px 0px 0px 0px;
-    background: @surface1;
-    color: @text;
-    font-size: 30px;
-    font-weight: bold;
-}
-
-#pulseaudio.icon {
-    border-radius: 0px;
-    margin: 0px 15px 0px 0px;
-    padding: 2px 0px 0px 0px;
-    background: @surface1;
-    color: @text;
-    font-size: 20px;
-    font-weight: bold;
-}
-
-#pulseaudio {
-    border-radius: 25px;
-    margin: 5px 5px 5px 0px;
-    padding: 2px 20px 0px 20px;
-    background: @overlay0;
-    color: @text;
-    font-size: 18px;
-    font-weight: bold;
 }
 
 #mode {
